[package]
name = "eta"
version = "0.1.1"
edition = "2021"
authors = ["Arkid Kaleci <akaleci@jacobs-university.de>"]
description = "Tracks progress on repetive tasks and measures estimated remaining times."
repository = "https://github.com/aaarkid/eta"
license = "MPL-2.0"
keywords = ["eta", "progress-bar", "progress-tracking", "remaining-time", "time-estimation"]
categories = ["date-and-time", "development-tools"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]